--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -66,22 +66,7 @@ if (hs.addSlideshow) hs.addSlideshow({
     </div>
 
 </div>
-    <?php if($this->addImagesssssss){?>
-    <div class="col-lg-12 padding-bottom" >
-        <div class="product-share clearfix">
-            <p> Дополнительные изображения</p>
-            <div class=""> 
-            <?php foreach($this->addImages as $image){?>
-                <div class="col-lg-4">
-                    <a href="<?= $this->baseUrl().'/images/task_images/'.$image ?>" class="highslide" onclick="return hs.expand(this)">
-                        <img src="<?= $this->baseUrl().'/images/task_images/'.$image ?>" class="img-thumbnail" width="200px">
-                    </a>
-                </div>
-            <?php } ?>
-            </div>
-        </div>
-        </div>
-    <?php } ?>
+
 <div role="tabpanel" >
 
   <!-- Nav tabs -->
@@ -161,12 +146,23 @@ if (hs.addSlideshow) hs.addSlideshow({
            <?= $this->task['description'] ?>
         </div>
         <?php if($this->task['task_image'] && $this->task['task_image'] != 'no-image.png'){?>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <a href="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="highslide" onclick="return hs.expand(this)">
                     <img src="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="img-thumbnail" width="200px">
                 </a>
             </div>
         <?php } ?>
+            <?php if($this->addImages){?>
+
+            <?php foreach($this->addImages as $image){?>
+                <div class="col-lg-3">
+                    <a href="<?= $this->baseUrl().'/images/task_images/additional_images/'.$image['image'] ?>" class="highslide" onclick="return hs.expand(this)">
+                        <img src="<?= $this->baseUrl().'/images/task_images/additional_images/'.$image['image'] ?>" class="img-thumbnail" width="200px">
+                    </a>
+                </div>
+            <?php } ?>
+
+    <?php } ?>
         <?php if($this->feedback){?>
 
         <div class="col-lg-12">
