--- a/application/modules/default/views/scripts/tasks/view.phtml
+++ b/application/modules/default/views/scripts/tasks/view.phtml
@@ -161,12 +161,23 @@ if (hs.addSlideshow) hs.addSlideshow({
            <?= $this->task['description'] ?>
         </div>  
                 <?php if($this->task['task_image'] && $this->task['task_image'] != 'no-image.png'){?>
-        <div class="col-lg-12">
+        <div class="col-lg-3">
             <a href="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="highslide" onclick="return hs.expand(this)">
                 <img src="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="img-thumbnail" width="200px">
             </a>
         </div>
         <?php } ?>
+        <?php if($this->addImages){?>
+
+            <?php foreach($this->addImages as $image){?>
+                <div class="col-lg-3">
+                    <a href="<?= $this->baseUrl().'/images/task_images/additional_images/'.$image['image'] ?>" class="highslide" onclick="return hs.expand(this)">
+                        <img src="<?= $this->baseUrl().'/images/task_images/additional_images/'.$image['image'] ?>" class="img-thumbnail" width="200px">
+                    </a>
+                </div>
+            <?php } ?>
+
+            <?php } ?>
     <?php if($this->feedback){?>
 
         <div class="col-lg-12">
