--- a/application/modules/performer/views/scripts/task/performers-view.phtml
+++ b/application/modules/performer/views/scripts/task/performers-view.phtml
@@ -1,19 +1,35 @@
+<script>
+hs.graphicsDir = <?= $this->baseUrl() ?>'/highslide/graphics/';
+hs.align = 'center';
+hs.transitions = ['expand', 'crossfade'];
+hs.outlineType = 'glossy-dark';
+hs.wrapperClassName = 'dark';
+hs.fadeInOut = true;
+//hs.dimmingOpacity = 0.75;
+
+// Add the controlbar
+if (hs.addSlideshow) hs.addSlideshow({
+	//slideshowGroup: 'group1',
+	interval: 5000,
+	repeat: false,
+	useControls: true,
+	fixedControls: 'fit',
+	overlayOptions: {
+		opacity: .6,
+		position: 'bottom center',
+		hideOnMouseOut: true
+	}
+});
+</script>
 <div class="col-lg-8">
     <h3><?= $this->task['title'] ?></h3><small><?= date("d.m.Y",$this->task['created_at']) ?></small>
 </div>
-<div class="col-lg-2">
 
-    <img id="prel<?= $this->task['id'] ?>" style="display:none" src="<?= $this->baseUrl() ?>/images/blue_preloader.gif" width="45">
-</div>
 <div class="col-lg-2">
 
 </div>
 <div class="col-sm-12">
-    <?php if($this->task['task_image']){?>
-        <div class="col-lg-4">
-            <img src="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="img-thumbnail" width="200px">
-        </div>
-    <?php } ?>
+    
     <div cloass="col-lg-4">
         <label>Статус : </label>
         <?php switch($this->task['status']){
@@ -102,6 +118,24 @@
                 <?php } ?>
             <?php } ?>
         </div>
+        <?php if($this->task['task_image']){?>
+            <div class="col-lg-3">
+                <a href="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="highslide" onclick="return hs.expand(this)">
+                    <img src="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="img-thumbnail" width="200px">
+                </a>
+            </div>
+        <?php } ?>
+        <?php if($this->addImages){?>
+
+            <?php foreach($this->addImages as $image){?>
+                <div class="col-lg-3">
+                    <a href="<?= $this->baseUrl().'/images/task_images/additional_images/'.$image['image'] ?>" class="highslide" onclick="return hs.expand(this)">
+                        <img src="<?= $this->baseUrl().'/images/task_images/additional_images/'.$image['image'] ?>" class="img-thumbnail" width="200px">
+                    </a>
+                </div>
+            <?php } ?>
+
+            <?php } ?>
         <?php if($this->tasksFeedback){?>
 
         <div class="col-lg-12">
