commit with database dump

--- a/application/modules/customer/views/scripts/index/index.phtml
+++ b/application/modules/customer/views/scripts/index/index.phtml
@@ -50,7 +50,7 @@ $(document).ready(function(){
                       Мы быстро найдем исполнителя для Вашего задания
                   </h3>
                   
-                  <a  href="<?= $this->baseUrl().'/customer/task/new-task'?>"class="btn btn-primary btn-lg">
+                  <a  href="<?= $this->baseUrl().'/customer/task/new-task/'?>"class="btn btn-primary btn-lg">
                       Заказать услугу
                       <span class="arrowUnicode">►</span>
                   </a> 
