--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -468,7 +468,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-          <li > <a href="#"  data-toggle="modal" data-target="#ModalSignup">Заказать услугу </a> </li>
+<!--          <li > <a href="#"  data-toggle="modal" data-target="#ModalSignup">Заказать услугу </a> </li>-->
+          <li > <a href="<?= $this->baseUrl()?>/default/tasks/fast-task">Заказать услугу </a> </li>
           <li > <a href="<?= $this->baseUrl()?>/default/performers/index">Исполнители </a> </li>
           <li > <a href="<?= $this->baseUrl()?>/default/tasks/index">Актуальные задания </a> </li>
 
