--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -472,7 +472,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
           <?php if(Zend_Auth::getInstance()->hasIdentity()){?>
-            <li> <a href="<?= $this->baseUrl()?>/performer/task/add">Заказать услугу</a> </li>
+            <li> <a href="<?= $this->baseUrl()?>/performer/task/add/">Заказать услугу</a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performer/index/tasks">Актуальные задания</a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performer/performers/">Исполнители </a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performer/about/">Как это работает</a> </li>
