once again thanks to "hoster.by" getting the problem with slashes solved

--- a/application/modules/customer/views/scripts/index/tasks.phtml
+++ b/application/modules/customer/views/scripts/index/tasks.phtml
@@ -57,7 +57,7 @@
                <?php if($task['customer_id'] != $this->userId){?> 
                     <a data-toggle="modal"  data-dismiss="modal" href="#getAPerformerModal" >
                <?php }else{ ?>
-                        <a  href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id'] ?>" >
+                        <a  href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id']."/" ?>" >
                <?php } ?>    
                <?php if($task['par_cat_image']){?>   
                    <div style="background: center no-repeat url('<?= $this->baseUrl().'/images/category_images/'.$task['par_cat_image'] ?>'); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
@@ -74,7 +74,7 @@
                         <?php if($task['customer_id'] != $this->userId){?> 
                             <a data-toggle="modal"  data-dismiss="modal" href="#getAPerformerModal" >
                        <?php }else{ ?>
-                                <a  href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id'] ?>" >
+                                <a  href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id']."/" ?>" >
                        <?php } ?> 
                        <?= $task['title'] ?>
                         </a>
@@ -110,7 +110,7 @@
                         <?php if($task['customer_id'] != $this->userId){?> 
                             <a data-toggle="modal" class="btn btn-primary"  data-dismiss="modal" href="#getAPerformerModal" >
                        <?php }else{ ?>
-                                <a class="btn btn-primary" href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id'] ?>" >
+                                <a class="btn btn-primary" href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id']."/" ?>" >
                        <?php } ?> 
                             <span class="add2cart"> Подробнее </span> 
                         </a> 
