--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -112,7 +112,7 @@ if (hs.addSlideshow) hs.addSlideshow({
         <?php if($this->task['performer_id']){?>
         <div class="col-lg-12">
             <label>Исполнитель : </label>
-            <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$this->task['u_id'] ?>"><?= $this->task['u_username'].' '.mb_substr($this->task['u_surname'], 0, 1, 'utf-8') ?></a>
+            <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$this->task['u_id']."/" ?>"><?= $this->task['u_username'].' '.mb_substr($this->task['u_surname'], 0, 1, 'utf-8') ?></a>
         </div>
         <?php } ?>
         <div class="col-lg-12">
@@ -177,7 +177,7 @@ if (hs.addSlideshow) hs.addSlideshow({
                     <b><?= $this->feedback['u_username'].' '.mb_substr($this->feedback['u_surname'],0,1,'utf-8').'.' ?></b>
                     
                     <small>
-                        Отзыв о выполнении задания <a style="color: #1dd0fd" href="<?= $this->baseUrl().'/customer/task/view/id/'.$this->feedback['t_id'] ?>">"<?= $this->feedback['t_title'] ?>"</a>
+                        Отзыв о выполнении задания <a style="color: #1dd0fd" href="<?= $this->baseUrl().'/customer/task/view/id/'.$this->feedback['t_id']."/" ?>">"<?= $this->feedback['t_title'] ?>"</a>
                     </small>
                     <?php if($this->feedback['kind'] == 'positive'){?>
                         <img style="padding-left: 5px" src="<?= $this->baseUrl().'/images/like.png' ?>" width="20">
@@ -549,7 +549,7 @@ if (hs.addSlideshow) hs.addSlideshow({
                             <div class="col-sm-6">
                               <h5 style="padding-bottom:5px">
                             <?php if($this->task['performer_id'] == $comment['user_from']){?>
-                                  <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$comment['user_from'] ?>">
+                                  <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$comment['user_from']."/" ?>">
                                       <strong>
                             <?= $comment['u_username'].' '.mb_substr($comment['u_surname'],0,1,'utf-8').'.' ?>
                                       </strong> 
@@ -640,7 +640,7 @@ if (hs.addSlideshow) hs.addSlideshow({
             <?php foreach($this->prepositions as $preposition){?>
             <tr id="tr<?= $preposition['u_id'] ?>">
                 <td>
-                    <a href="<?= $this->baseUrl()."/customer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_username'].' '.mb_substr($preposition['u_surname'], 0, 1, 'utf-8').'.' ?></a>
+                    <a href="<?= $this->baseUrl()."/customer/performers/performer-view/id/".$preposition['performer_id']."/" ?>"><?= $preposition['u_username'].' '.mb_substr($preposition['u_surname'], 0, 1, 'utf-8').'.' ?></a>
                 </td>
                 <td>
                     <?php $prepRating = floor($preposition['rating']) ?>
