--- a/application/modules/performer/views/scripts/customer/view.phtml
+++ b/application/modules/performer/views/scripts/customer/view.phtml
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="breadcrumbDiv col-lg-12">
       <ul class="breadcrumb">
-          <li> <a href="<?= $this->baseUrl().'/performer/' ?>">Главная</a> </li>
+          <li> <a href="<?= $this->baseUrl().'/performer' ?>">Главная</a> </li>
         <li class="active"><?= $this->user['username'].' '.mb_substr($this->user['surname'], 0, 1, 'utf-8').'.' ?> </li>
       </ul>
     </div>
@@ -383,7 +383,7 @@
                     <?php } ?>    
                     </small></br>
                     <small>
-                        Отзыв о выполнении задания <a style="color: #1dd0fd" href="<?= $this->baseUrl().'/performer/task/view/id/'.$feedback['t_id'] ?>">"<?= $feedback['t_title'] ?>"</a>
+                        Отзыв о выполнении задания <a style="color: #1dd0fd" href="<?= $this->baseUrl().'/performer/task/view/id/'.$feedback['t_id']."/" ?>"><?= $feedback['t_title'] ?></a>
                     </small>
                     <?php if($feedback['kind'] == 'positive'){?>
                         <img style="padding-left: 5px" src="<?= $this->baseUrl().'/images/like.png' ?>" width="20">
