--- a/application/modules/performer/views/scripts/task/performers-view.phtml
+++ b/application/modules/performer/views/scripts/task/performers-view.phtml
@@ -95,12 +95,12 @@ if (hs.addSlideshow) hs.addSlideshow({
     <div role="tabpanel" class="tab-pane active" id="home">
 <div class="col-lg-12">
            <label>Заказчик : </label>
-           <a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$this->task['customer_id'] ?>"><?= $this->task['u_username'].' '.mb_substr($this->task['u_surname'],0,1,'utf-8').'.' ?></a>
+           <a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$this->task['customer_id']."/" ?>"><?= $this->task['u_username'].' '.mb_substr($this->task['u_surname'],0,1,'utf-8').'.' ?></a>
         </div>
         <?php if($this->task['performer_id']){?>
         <div class="col-lg-12">
            <label>Исполнитель : </label>
-           <a href="<?= $this->baseUrl().'/performer/performers/performer-view/id/'.$this->task['performer_id'] ?>"><?= $this->task['up_username'].' '.mb_substr($this->task['up_surname'],0,1,'utf-8').'.' ?></a>
+           <a href="<?= $this->baseUrl().'/performer/performers/performer-view/id/'.$this->task['performer_id']."/" ?>"><?= $this->task['up_username'].' '.mb_substr($this->task['up_surname'],0,1,'utf-8').'.' ?></a>
         </div>
         <?php } ?>
         <div class="col-lg-12">
@@ -169,7 +169,7 @@ if (hs.addSlideshow) hs.addSlideshow({
                     <b><?= $this->tasksFeedback['u_username'].' '.mb_substr($this->tasksFeedback['u_surname'],0,1,'utf-8').'.' ?></b>
                     
                     <small>
-                        Отзыв о выполнении задания <a style="color: #1dd0fd" href="<?= $this->baseUrl().'/customer/task/view/id/'.$this->tasksFeedback['t_id'] ?>">"<?= $this->tasksFeedback['t_title'] ?>"</a>
+                        Отзыв о выполнении задания <a style="color: #1dd0fd" href="<?= $this->baseUrl().'/customer/task/view/id/'.$this->tasksFeedback['t_id']."/" ?>">"<?= $this->tasksFeedback['t_title'] ?>"</a>
                     </small>
                     <?php if($this->tasksFeedback['kind'] == 'positive'){?>
                         <img style="padding-left: 5px" src="<?= $this->baseUrl().'/images/like.png' ?>" width="20">
@@ -366,7 +366,7 @@ if (hs.addSlideshow) hs.addSlideshow({
                     <?php }else{?>
                         <div class="col-sm-3"></div>
                         <div class="col-sm-6">
-                            <h5><a href="<?= $this->baseUrl().'/customer/performes/view/id/'.$comment['u_id'] ?>"><?= $comment['u_username'] ?></a></h5>
+                            <h5><a href="<?= $this->baseUrl().'/customer/performes/view/id/'.$comment['u_id']."/" ?>"><?= $comment['u_username'] ?></a></h5>
                             <small><?= date("h:i d.m.y", $comment['created']); ?></small>
                             <p><?= $comment['text'] ?></p>
                         </div>
@@ -446,7 +446,7 @@ if (hs.addSlideshow) hs.addSlideshow({
             <?php foreach($this->prepositions as $preposition){?>
             <tr id="tr<?= $preposition['u_id'] ?>">
                 <td>
-                    <a href="<?= $this->baseUrl()."/performer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_username'].' '.mb_substr($preposition['u_surname'], 0, 1,'utf-8').'.' ?></a>
+                    <a href="<?= $this->baseUrl()."/performer/performers/performer-view/id/".$preposition['performer_id']."/" ?>"><?= $preposition['u_username'].' '.mb_substr($preposition['u_surname'], 0, 1,'utf-8').'.' ?></a>
                 </td>
                 <td>
                    
